<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.CoffeeDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_blob_background"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/blob_background_shape"
            android:scaleType="fitXY"
            android:src="@drawable/ic_blob_two"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/coffee_bag_content"
            layout="@layout/coffee_bag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/iv_blob_background"
            app:layout_constraintEnd_toEndOf="@+id/iv_blob_background"
            app:layout_constraintStart_toStartOf="@+id/iv_blob_background"
            app:layout_constraintTop_toTopOf="@+id/iv_blob_background" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/asap"
            android:textAlignment="center"
            android:textAppearance="@style/Theme.KivraCoffee.TitleText"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_blob_background"
            tools:text="Blend name" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardBackgroundColor="?colorPrimarySurface"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingStart="1dp"
                    android:text="@string/notes"
                    android:textAppearance="@style/Theme.KivraCoffee.SubtitleText"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/tv_intensifier" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/intensifiers"
                    android:textAppearance="@style/Theme.KivraCoffee.SubtitleText"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/tv_variety" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/origin"
                    android:textAppearance="@style/Theme.KivraCoffee.SubtitleText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/variety"
                    android:textAppearance="@style/Theme.KivraCoffee.SubtitleText"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/tv_origin" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_origin_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/view_on_the_map"
                    android:textAppearance="@style/Theme.KivraCoffee.ChipText"
                    app:rippleColor="@color/kivra_green"
                    app:chipBackgroundColor="@color/color_chip_on_surface"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_origin"
                    app:layout_constraintEnd_toEndOf="@+id/ch_variety_btn"
                    app:layout_constraintStart_toStartOf="@+id/ch_variety_btn"
                    app:layout_constraintTop_toTopOf="@+id/tv_origin" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/ch_variety_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:text="@string/search_in_google"
                    android:textAppearance="@style/Theme.KivraCoffee.ChipText"
                    app:rippleColor="@color/kivra_green"
                    app:chipBackgroundColor="@color/color_chip_on_surface"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_variety"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_variety" />

                <TextView
                    android:id="@+id/tv_origin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/asap"
                    android:textAppearance="@style/Theme.KivraCoffee.TitleText"
                    app:layout_constraintEnd_toStartOf="@+id/ch_origin_btn"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    tools:text="Warsaw, Poland" />

                <TextView
                    android:id="@+id/tv_variety"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp"
                    android:textAppearance="@style/Theme.KivraCoffee.TitleText"
                    app:layout_constraintEnd_toStartOf="@+id/ch_variety_btn"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    tools:text="Arabica" />

                <TextView
                    android:id="@+id/tv_intensifier"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="20dp"
                    android:textAppearance="@style/Theme.KivraCoffee.TitleText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    tools:text="Lingering" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cg_notes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_back_btn"
            android:layout_width="18dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_arrow_ripple"
            android:clickable="true"
            android:contentDescription="@string/floating_action_button"
            android:focusable="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow"
            android:tintMode="src_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@android:color/transparent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>