<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:theme="@style/Theme.KivraCoffee.AppBarOverlay"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:popupTheme="@style/Theme.KivraCoffee.AppBarOverlay"
            app:title="Kivra Coffee"
            app:titleCentered="true"
            app:titleTextAppearance="@style/Theme.KivraCoffee.TitleText.Home"
            app:titleTextColor="@color/kivra_green" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCoffeeList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/home_subtitle"
            app:layout_constraintVertical_bias="1.0"
            tools:itemCount="5"
            tools:listitem="@layout/item_coffee" />

        <TextView
            android:id="@+id/home_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/get_to_know_the_best_coffees_in_our_office"
            android:textAppearance="@style/Theme.KivraCoffee.SubtitleText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/empty_layout"
            layout="@layout/empty_coffee_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_subtitle" />

        <include
            android:id="@+id/shimmer_coffee_list"
            layout="@layout/shimmer_coffee_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_subtitle" />

        <ImageView
            android:id="@+id/iv_fab_blob"
            android:layout_width="80dp"
            android:layout_height="70dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/ic_blob_ripple"
            android:clickable="true"
            android:contentDescription="@string/floating_action_button"
            android:focusable="true"
            android:scaleType="fitXY"
            android:src="@drawable/ic_blob_one"
            android:tintMode="src_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@android:color/transparent"
            tools:layout_gravity="center" />

        <ImageView
            android:id="@+id/iv_filter_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/filter_icon"
            android:src="@drawable/ic_round_filter_alt_24"
            app:layout_constraintBottom_toBottomOf="@+id/iv_fab_blob"
            app:layout_constraintEnd_toEndOf="@+id/iv_fab_blob"
            app:layout_constraintStart_toStartOf="@+id/iv_fab_blob"
            app:layout_constraintTop_toTopOf="@+id/iv_fab_blob"
            app:tint="#99FFFFFF" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>